turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: not found: value setCouleur
	case Color.black => setCouleur(Color.white)
                            ^LangtonsAnt:6: error: not found: value setCouleur
	case Color.white => setCouleur(Color.black)
                            ^